--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -44,7 +43,7 @@
         <div class="container">
 
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src="./images/WhatsApp Image 2021-07-01 at 8.40.21 PM.jpeg"
+            <a class="navbar-brand logo-image" href="index.html"><img src=""
                     alt="alternative"></a>
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
