--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
         <div class="container">
 
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src=""
+            <!-- <a class="navbar-brand logo-image" href="index.html"><img src="./images/WhatsApp Image 2021-07-01 at 8.40.21 PM.jpeg"
                     alt="alternative"></a>
+            -->
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Spify</a> -->
+            <a class="navbar-brand logo-text page-scroll" href="index.html">PRIME WAY</a>
 
             <!-- <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
