--- a/index.html
+++ b/index.html
@@ -632,18 +632,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © <a href="#your-link"> 2020-2021 www.primeway.online </a></p>
+                    <p class="p-small">Copyright © <a href="https://primeway.online/"> 2020-2021 www.primeway.online </a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <p class="p-small"> <a href="https://primeway.online/"></p>
-                </div> <!-- end of col -->
-            </div> <!-- enf of row -->
-        </div> <!-- end of container -->
+        
     </div> <!-- end of copyright -->
     <!-- end of copyright -->
 
