--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
         <div class="container">
 
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src="./images/4646.png"
-                    alt="alternative"></a>
+            <!-- <a class="navbar-brand logo-image" href="index.html"><img src="./images/4646.png" alt="alternative"></a>  -->
            
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">PRIME WAY</a>  -->
+            <a class="navbar-brand logo-text page-scroll" href="index.html">PRIME WAY</a>
 
             <!-- <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
@@ -94,7 +93,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="image-container">
-                        <img class="img-fluid" src="./images/Artboard 2.svg" alt="alternative">
+                        <img class="img-fluid" src="./images/4646.png" alt="alternative">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
