--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
     <!-- Webpage Title -->
-    <title>Prime</title>
+    <title>Prime Way | Enhanced Technology</title>
 
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
