--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Branding & strategy</h5>
-                                <div class="card-text">To build a solid foundation for your online shop you need a
-                                    strong brand and a bulletproof strategy</div>
+                                <div class="card-text">To build a solid foundation for your Buisness you need a
+                                    strong brand and a good strategy</div>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -164,24 +164,28 @@
                     <div class="text-container">
                         <h2>Branding & strategy</h2>
                         <hr class="hr-heading">
-                        <p>To build a solid foundation for your online shop you need a strong brand and a bulletproof
-                            strategy. You can rely on our experience to create a beautiful and efficient online shop</p>
+                        <p>To build a solid foundation for your Buisness you need a strong brand and a good
+                            strategy. we will give you a full support and assistance of your Buisness Growth.</p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Delivering powerful brands for popular shops</div>
+                                <div class="media-body">Developing beautiful websight For better experience </div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Creating beautiful concepts and evocative logos</div>
+                                <div class="media-body">Creating good concepts and logo Design</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Preparing complete branding guides and styles</div>
+                                <div class="media-body">Preparing complete Buisness Statergy and DigitalMarketing </div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Speedy delivery of marketing design assets</div>
+                                <div class="media-body">Search engine optimization </div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body">Social media marketting </div>
                             </li>
                         </ul>
                     </div> <!-- end of text-container -->
