--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Developing beautiful websight For better experience </div>
+                                <div class="media-body">Developing beautiful websight</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -177,16 +177,16 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Preparing complete Buisness Statergy and DigitalMarketing </div>
+                                <div class="media-body">Poster Designing </div>
                             </li>
-                            <li class="media">
+                            <!-- <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Search engine optimization </div>
+                                <div class="media-body"> </div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
                                 <div class="media-body">Social media marketting </div>
-                            </li>
+                            </li> -->
                         </ul>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
