--- a/index.html
+++ b/index.html
@@ -177,16 +177,16 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Poster Designing </div>
+                                <div class="media-body">Creative Poster Designing </div>
                             </li>
-                            <!-- <li class="media">
+                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"> </div>
+                                <div class="media-body"> Online marketing statergy and brand Building </div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
                                 <div class="media-body">Social media marketting </div>
-                            </li> -->
+                            </li> 
                         </ul>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
