--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <!-- Image Logo -->
             <!-- <a class="navbar-brand logo-image" href="index.html"><img src="./images/4646.png" alt="alternative"></a>  -->
-           
+
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <a class="navbar-brand logo-text page-scroll" href="index.html">PRIME WAY</a>
@@ -65,7 +65,7 @@
                         <a class="nav-link page-scroll" href="#strengths">Service</a>
                     </li>
                     <li class="nav-item">
-                         <a class="nav-link page-scroll" href="#about">About</a>
+                        <a class="nav-link page-scroll" href="#about">About</a>
                     </li>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drop</a>
@@ -188,7 +188,7 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/details-1.png" alt="alternative">
+                        <img class="img-fluid" src="images/Branding and strategy.jpg" alt="Branding and strategy">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -203,17 +203,19 @@
             <div class="row">
                 <div class="image-area">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/details-2.jpg" alt="alternative">
+                        <img class="img-fluid" src="images/Design and Development.jpg" alt="Design and Development">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of image-area -->
                 <div class="text-area">
                     <div class="text-container">
                         <h2>Design & development</h2>
                         <hr class="hr-heading">
-                        <p>Our team of competent designers and developers are able to create beautiful designs and
-                            structured code that will serve your ecommerce project to establish your market position and
-                            increase revenues</p>
-                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox">Lightbox</a>
+                        <p>Prime Way team of competent designers and developers are able to create beautiful designs and
+                            structured code that will serve you excellent online appearance of your business.
+                            We guarantee you this definitely work for your business to grow higher level and increase
+                            revenues</p>
+                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox">Strategy &
+                            Plan</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of text-area -->
             </div> <!-- end of row -->
@@ -222,46 +224,35 @@
     <!-- end of details 2 -->
 
 
-    <!-- Details Lightbox -->
-    <!-- Lightbox -->
+    <!-- Details lightbox -->
+    <!-- lightbox -->
     <div id="details-lightbox" class="lightbox-basic zoom-anim-dialog mfp-hide">
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-8">
                 <div class="image-container">
-                    <img class="img-fluid" src="images/details-lightbox.jpg" alt="alternative">
+                    <img class="img-fluid" src="images/Strategy and Plan.jpg" alt="Strategy and Plan">
                 </div> <!-- end of image-container -->
             </div> <!-- end of col -->
             <div class="col-lg-4">
-                <h3>Goals Setting</h3>
+                <h3>Designing</h3>
                 <hr>
-                <p>The app can easily help you track your personal development evolution if you take the time to set it
-                    up.</p>
-                <h4>User Feedback</h4>
-                <p>This is a great app which can help you save time and make your live easier. And it will help improve
-                    your productivity.</p>
-                <ul class="list-unstyled li-space-lg">
-                    <li class="media">
-                        <i class="fas fa-check"></i>
-                        <div class="media-body">Splash screen panel</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas fa-check"></i>
-                        <div class="media-body">Statistics graph report</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas fa-check"></i>
-                        <div class="media-body">Events calendar layout</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas fa-check"></i>
-                        <div class="media-body">Location details screen</div>
-                    </li>
-                    <li class="media">
-                        <i class="fas fa-check"></i>
-                        <div class="media-body">Onboarding steps interface</div>
-                    </li>
-                </ul>
+                <p>
+                    The user-friendly design definitely helps the target customers to reach your business. Continuously
+                    following user experience for making perfect design and interface.
+                </p>
+                <h3>Development</h3>
+                <hr>
+                <p>
+                    By utilizing advanced cutting edge technology we develop websites from designs.
+                    <br>
+                    Static responsive landing page
+                    <br>
+                    Dynamic websites with admin panel
+                </p>
+                <h3>Deploy</h3>
+                <hr>
+                <p>Deploy your website and analyse your target audience</p>
                 <a class="btn-solid-reg mfp-close page-scroll" href="#contact">Contact Us</a> <button
                     class="btn-outline-reg mfp-close as-button" type="button">Back</button>
             </div> <!-- end of col -->
@@ -303,7 +294,7 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/details-3.png" alt="alternative">
+                        <img class="img-fluid" src="images/Digital-Marketing.jpg" alt="Digital-Marketing">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -600,7 +591,7 @@
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://twitter.com/primwayteam">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-twitter fa-stack-1x"></i>
                             </a>
@@ -631,12 +622,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © <a href="https://primeway.online/"> 2020-2021 www.primeway.online </a></p>
+                    <p class="p-small">Copyright © <a href="https://primeway.online/"> 2020-2021 www.primeway.online
+                        </a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
 
-        
+
     </div> <!-- end of copyright -->
     <!-- end of copyright -->
 
