--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                         <a class="nav-link page-scroll" href="#header">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#details">Details</a>
+                        <a class="nav-link page-scroll" href="#details">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#strengths">Service</a>
+                        <a class="nav-link page-scroll" href="#strengths">Details</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#about">About</a>
@@ -99,7 +99,7 @@
                 <div class="col-lg-6">
                     <div class="text-container">
                         <h3>We offer complete websight development and support</h3>
-                        <a class="btn-solid-lg page-scroll" href="#details">Discover</a>
+                        <a class="btn-solid-lg page-scroll" href="#details">Services</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -129,8 +129,8 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Design & development</h5>
-                                <div class="card-text">Our team of competent designers and developers are able to create
-                                    beautiful designs and structured code</div>
+                                <div class="card-text">Prime Way team of competent designers and developers are able to
+                                    create beautiful websites</div>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -142,8 +142,8 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Digital marketing</h5>
-                                <div class="card-text">We can deliver a comprehensive marketing plan and then execute it
-                                    down to the smallest details</div>
+                                <div class="card-text">We deliver comprehensive marketing strategy and 
+                                    execution. Can monitor realtime conversion and analytics</div>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -214,8 +214,8 @@
                     <div class="text-container">
                         <h2>Design & development</h2>
                         <hr class="hr-heading">
-                        <p>Prime Way team of competent designers and developers are able to create beautiful designs and
-                            structured code that will serve you excellent online appearance of your business.
+                        <p>Prime Way team of competent designers and developers are able to create beautiful websites
+                            that will serve you excellent online appearance of your business.
                             We guarantee you this definitely work for your business to grow higher level and increase
                             revenues</p>
                         <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox">Strategy &
