--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Digital marketing</h5>
-                                <div class="card-text">We deliver comprehensive marketing strategy and 
-                                    execution. Can monitor realtime conversion and analytics</div>
+                                <div class="card-text">We deliver comprehensive marketing strategy and
+                                    execution. Monitor realtime conversion and analytics</div>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -179,14 +179,14 @@
                                 <i class="fas fa-square"></i>
                                 <div class="media-body">Creative Poster Designing </div>
                             </li>
-                             <li class="media">
+                            <li class="media">
                                 <i class="fas fa-square"></i>
                                 <div class="media-body"> Online marketing statergy and brand Building </div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
                                 <div class="media-body">Social media marketting </div>
-                            </li> 
+                            </li>
                         </ul>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -274,8 +274,9 @@
                     <div class="text-container">
                         <h2>Digital marketing</h2>
                         <hr class="hr-heading">
-                        <p>We can deliver a comprehensive marketing plan and then execute it down to the smallest
-                            details. Our marketing specialist will also conduct evaluations regularly and advise you</p>
+                        <p>We can deliver a comprehensive marketing strategy and execution. Monitor realtime conversion
+                            and analytics. We will conduct evaluations regularly and advise you.
+                        </p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -283,11 +284,11 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Email campaigns for the existing customers</div>
+                                <div class="media-body">Social media campaigns page handling</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Remarketing campaigns to reduce cart abandon</div>
+                                <div class="media-body">Web analytics and conversion</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
