--- a/index.html
+++ b/index.html
@@ -479,8 +479,9 @@
                 <div class="col-lg-12">
                     <div class="text-container bg-gray">
                         <h2>About our team</h2>
-                        <p>We are a group of designers, developers and marketers specialized in the Shopify platform.
-                            We've launched many stores in 10 years</p>
+                        <p>We are a group of designers, developers and marketers specialized in the web technologies,
+                            digital marketing and social media 
+                        </p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -488,16 +489,16 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Shopify is our go to platform for online shops</div>
+                                <div class="media-body">Static web pages for brands, celebrities</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">We are Shopify partners for about 5 years</div>
+                                <div class="media-body">Shopify and Woocommerce platform for shoping</div>
                             </li>
                         </ul>
                     </div> <!-- end of text-container -->
                     <div class="image-container">
-                        <img class="img-fluid" src="images/about.jpg" alt="alternative">
+                        <img class="img-fluid" src="images/about-us.jpg" alt="about-us">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -573,9 +574,9 @@
                 <div class="col-lg-12">
                     <div class="footer-col first">
                         <h6> About Prime Way</h6>
-                        <p class="p-small">Prime Way team is a buisness supporting platfoam for helping to improve thier
-                            buisness through Good websight developing and well maitain websight Through their entire
-                            Growth </p>
+                        <p class="p-small">Prime Way team is a buisness supporting platfoam for helping to improve your
+                            buisness through good online apperance by websight developing, Social media, online
+                            portfolio management conitious analytics and giveing advise for your entire Growth </p>
                     </div> <!-- end of footer-col -->
                     <div class="footer-col second">
                         <h6> Quick Links</h6>
