--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Your description">
-    <meta name="author" content="Your name">
+    <meta name="Prime Way | Ehanced Technology" content="Your description">
+    <meta name="primewaytechnologies" content="primeway enhanced technology">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
     <meta property="og:site_name" content="" /> <!-- website name -->
@@ -33,7 +33,7 @@
     <link href="css/styles.css" rel="stylesheet">
 
     <!-- Favicon  -->
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="images/pfavicon.svg">
 </head>
 
 <body data-spy="scroll" data-target=".fixed-top">
@@ -93,7 +93,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="image-container">
-                        <img class="img-fluid" src="./images/4646.png" alt="alternative">
+                        <img class="img-fluid" src="./images/logo-prime-way.png" alt="logo-prime-way">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
@@ -480,7 +480,7 @@
                     <div class="text-container bg-gray">
                         <h2>About our team</h2>
                         <p>We are a group of designers, developers and marketers specialized in the web technologies,
-                            digital marketing and social media 
+                            digital marketing and social media
                         </p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
@@ -581,12 +581,13 @@
                     <div class="footer-col second">
                         <h6> Quick Links</h6>
                         <ul class="list-unstyled li-space-lg p-small">
-                            <!-- <li>Important: <a href="terms.html">Terms & Conditions</a>, <a href="privacy.html">Privacy Policy</a></li> -->
-                            <!-- <li>Useful: <a href="#">Colorpicker</a>, <a href="#">Icon Library</a>, <a href="#">Illustrations</a></li> -->
-                            <li>Home <a class="page-scroll" href="#header"><br>About us<br></a> <a class="page-scroll"
-                                    href="#details">Services<br></a> <a class="page-scroll"
-                                    href="#strengths">Offers<br></a> <a class="page-scroll"
-                                    href="#contact">Details<br></a></li>
+                            <li><a href="terms.html">Terms & Conditions</a><br>
+                                <a href="privacy.html">Privacy Policy<br></a>
+                                <a class="page-scroll" href="#about">About<br></a>
+                                <a class="page-scroll" href="#details">Services<br></a>
+                                <a class="page-scroll" href="#contact">Book consultation<br></a>
+                                <a class="page-scroll" href="#strengths"><br></a>
+                            </li>
                         </ul>
                     </div> <!-- end of footer-col -->
                     <div class="footer-col third">
