--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link href="css/styles.css" rel="stylesheet">
 
     <!-- Favicon  -->
-    <link rel="icon" href="images/pfavicon.svg">
+    <link rel="icon" href="images/pwfavicon.png">
 </head>
 
 <body data-spy="scroll" data-target=".fixed-top">
