--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="image-container">
-                                                <img class="img-fluid" src="images/project-1.jpg" alt="alternative">
+                                                <img class="img-fluid" src="images/static-web-pages.jpg" alt="alternative">
                                             </div> <!-- end of image-container -->
                                         </div> <!-- end of col -->
                                         <div class="col-lg-6">
@@ -408,7 +408,7 @@
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="image-container">
-                                                <img class="img-fluid" src="images/project-2.jpg" alt="alternative">
+                                                <img class="img-fluid" src="images/pexels-photomix-company-230544.jpg" alt="alternative">
                                             </div> <!-- end of image-container -->
                                         </div> <!-- end of col -->
                                         <div class="col-lg-6">
@@ -433,7 +433,7 @@
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="image-container">
-                                                <img class="img-fluid" src="images/project-3.jpg" alt="alternative">
+                                                <img class="img-fluid" src="images/social-media-marketing.jpg" alt="alternative">
                                             </div> <!-- end of image-container -->
                                         </div> <!-- end of col -->
                                         <div class="col-lg-6">
