image bug edited

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="image-container">
-                                                <img class="img-fluid" src="images/pexels-photomix-company-230544.jpg" alt="alternative">
+                                                <img class="img-fluid" src="images/e-commerce.jpg" alt="alternative">
                                             </div> <!-- end of image-container -->
                                         </div> <!-- end of col -->
                                         <div class="col-lg-6">
