--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
             <!-- Image Logo -->
             <!-- <a class="navbar-brand logo-image" href="index.html"><img src="./images/4646.png" alt="alternative"></a>  -->
 
-
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <a class="navbar-brand logo-text page-scroll" href="index.html">PRIME WAY</a>
 
-            <!-- <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
+            <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
-            </button> -->
+            </button>
 
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
@@ -67,16 +66,10 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#about">About</a>
                     </li>
-                    <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drop</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item page-scroll" href="article.html">Article Details</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="terms.html">Terms Conditions</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="privacy.html">Privacy Policy</a>
-                        </div>
-                    </li> -->
+               <!-- <li class="nav-item">
+                        <a class="nav-link page-scroll" href="#about">About</a>
+                    </li>
+                -->
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#contact">Contact</a>
                     </li>
@@ -383,7 +376,8 @@
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="image-container">
-                                                <img class="img-fluid" src="images/static-web-pages.jpg" alt="alternative">
+                                                <img class="img-fluid" src="images/static-web-pages.jpg"
+                                                    alt="alternative">
                                             </div> <!-- end of image-container -->
                                         </div> <!-- end of col -->
                                         <div class="col-lg-6">
@@ -433,7 +427,8 @@
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="image-container">
-                                                <img class="img-fluid" src="images/social-media-marketing.jpg" alt="alternative">
+                                                <img class="img-fluid" src="images/social-media-marketing.jpg"
+                                                    alt="alternative">
                                             </div> <!-- end of image-container -->
                                         </div> <!-- end of col -->
                                         <div class="col-lg-6">
@@ -634,8 +629,6 @@
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
-
-
     </div> <!-- end of copyright -->
     <!-- end of copyright -->
 
