--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#about">About</a>
                     </li>
-               <!-- <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link page-scroll" href="#about">About</a>
                     </li>
                 -->
@@ -382,7 +382,7 @@
                                         </div> <!-- end of col -->
                                         <div class="col-lg-6">
                                             <div class="text-container">
-                                                <h4>Online retailer shop</h4>
+                                                <h4>Static web pages for Brands</h4>
                                                 <p>We were proud to partner with Online Retailer in order to create a
                                                     modern online store where customers can purchase some of the best
                                                     items from the market at affordable prices</p>
@@ -390,7 +390,9 @@
                                                     Shopify implementation. Their specialized experience helped the
                                                     project and made it available 2 weeks prior the launch date for
                                                     extensive testing"</p>
+                                        <!-- 
                                                 <div class="testimonial-author">Michael Smith - General Manager</div>
+                                        -->
                                             </div> <!-- end of text-container -->
                                         </div> <!-- end of col -->
                                     </div> <!-- end of row -->
@@ -407,7 +409,7 @@
                                         </div> <!-- end of col -->
                                         <div class="col-lg-6">
                                             <div class="text-container">
-                                                <h4>Shopify ecommerce site</h4>
+                                                <h4>Ecommerce websites</h4>
                                                 <p>We were proud to partner with Online Retailer in order to create a
                                                     modern online store where customers can purchase some of the best
                                                     items from the market at affordable prices</p>
@@ -415,7 +417,9 @@
                                                     Shopify implementation. Their specialized experience helped the
                                                     project and made it available 2 weeks prior the launch date for
                                                     extensive testing"</p>
+                                            <!--
                                                 <div class="testimonial-author">Ronnie Blake - Sales Manager</div>
+                                            -->
                                             </div> <!-- end of text-container -->
                                         </div> <!-- end of col -->
                                     </div> <!-- end of row -->
@@ -433,7 +437,7 @@
                                         </div> <!-- end of col -->
                                         <div class="col-lg-6">
                                             <div class="text-container">
-                                                <h4>Online fashion shop</h4>
+                                                <h4>Social media marketing campaign</h4>
                                                 <p>We were proud to partner with Online Retailer in order to create a
                                                     modern online store where customers can purchase some of the best
                                                     items from the market at affordable prices</p>
@@ -441,8 +445,9 @@
                                                     Shopify implementation. Their specialized experience helped the
                                                     project and made it available 2 weeks prior the launch date for
                                                     extensive testing"</p>
-                                                <div class="testimonial-author">Nicole Richter - Development Manager
-                                                </div>
+                                        <!--    
+                                            <div class="testimonial-author">Nicole Richter - Development Manager</div>
+                                        -->
                                             </div> <!-- end of text-container -->
                                         </div> <!-- end of col -->
                                     </div> <!-- end of row -->
@@ -507,7 +512,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h4>We invite you to book a consultation call with one of our Key Account Managers and we guarantee
+                    <h4>We invite you to book a consultation call with one of our Key Team Managers and we guarantee
                         it will not be a waste of time</h4>
                     <a class="btn-solid-lg page-scroll" href="#contact">Book Consultation</a>
                 </div> <!-- end of col -->
