--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
         <div class="container">
             <div class="row">
                 <div class="text-container">
-                    <h4>Our mission is to deliver reliable ecommerce solutions together with the necessary consulting
-                        and marketing services which will help customers achieve long term market stability</h4>
+                    <h4>Our mission is to deliver reliable websihght together with the necessary consulting
+                        and marketing services which will help to improve their buisness stability</h4>
                 </div> <!-- end of text-container -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -330,20 +330,18 @@
                         <li class="media">
                             <div class="bullet">1</div>
                             <div class="media-body">
-                                <h4>Specialized expertise</h4>
-                                <p>We've been deploying successful online shops for about 10 year and we've made it our
-                                    mission to provide the best Shopify development services in the industry. Besides
-                                    the shop itself we also provide branding and strategy services to create solid
-                                    foundations our customers online projects</p>
+                                <h4>specialized Expertise</h4>
+                                <p>we've made it ourmission to provide the best websight development services in the industry. Besides
+                                    the firm  itself we also provide branding and strategy services to create solid
+                                    foundation on your buisness </p>
                             </div>
                         </li>
                         <li class="media">
                             <div class="bullet">2</div>
                             <div class="media-body">
-                                <h4>Shopify partner</h4>
-                                <p>Our partnership with Shopify enables us to stay on top of all platform updates and
-                                    prepare them for installation in your own online store. We're in permanent
-                                    communication with the Shopify design and development team so we can solve any
+                                <h4>Ecommerce and Digital-Marketing</h4>
+                                <p>Our partnership with Ecommerce stores enables us to stay on top of all platform updates and
+                                    prepare them for installation in your own online store. we have to support them for thier buisness Growth Through Digitalmarketing and social media marketting, We're a good development team so we can solve any
                                     difficult situations that can occur after major updates</p>
                             </div>
                         </li>
@@ -354,8 +352,8 @@
                                 <p>We take pride in delivering projects before the deadline to extend the pre-launch
                                     testing period. This ensures a smooth user experience and it also helps with
                                     bringing visitors back. You can check out or <a class="red page-scroll"
-                                        href="#projects">projects section</a> below to hear straight from our customers
-                                    what they think about us</p>
+                                        href="#projects">projects section</a> 
+                                </p>
                             </div>
                         </li>
                     </ul>
