--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                     <!-- Contact Form -->
                     <form id="contactForm" autocomplete="off" name="google-sheet" method="POST">
                         <div class="form-group">
-                            <input type="text" class="form-control-input" id="cname" name="name"required>
+                            <input type="text" class="form-control-input" id="cname" name="Name"required>
                             <label class="label-control" for="cname">Name</label>
                         </div>
                         <div class="form-group">
