--- a/article.html
+++ b/article.html
@@ -18,7 +18,7 @@
 	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
     <!-- Webpage Title -->
-    <title>Article Details - Spify</title>
+    <title>Article Details - Prime Way</title>
     
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
