text box spinner removed

--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                             <label class="label-control" for="cemail">Email</label>
                         </div>
                         <div class="form-group">
-                            <input type="number" class="form-control-input" id="Phone" name="Phone">
+                            <input type="text" inputmode="numeric" class="form-control-input" id="Phone" name="Phone">
                             <label class="label-control" for="Phone">Phone</label>
                         </div>
                         <div class="form-group">
