--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
     <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
     <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
+    <meta name="p:domain_verify" content="f7cd26280bf27d936bbbb2358a46006f"/>
 
     <!-- Webpage Title -->
     <title>Prime Way | Enhanced Technology</title>
